[tool.poetry]
name = "reproca"
version = "0.1.0"
description = ""
authors = ["aspizu <aspizu@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.34.0"
msgspec = "^0.18.5"
typing-extensions = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
add_imports = ["from __future__ import annotations"]
atomic = true
lines_between_sections = 0


[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
# If a library doesn't provide type-stubs, this disables type-checking.
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingModuleSource = false
# Some libraries just don't provide type-stubs.
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false


[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = ["ANN101", "F841", "ANN001", "COM819", "COM812", "W293", "W291", "A001",
          "SIM102", "DTZ005", "I001", "Q000", "A003", "ERA001", "PLW2901", "ISC001",
          "S307", "PGH001", "PGH003", "SLF001", "E741", "D107"]
